feat: web production deployment to cadhy.app
- Deploy landing page to Vercel with custom domain cadhy.app
- Add SEO: sitemap.xml, robots.txt, manifest.json, JSON-LD schemas
- Enhanced meta tags for Open Graph and Twitter cards
- Remove GitHub Pages workflows (deploy-web.yml, release.yml)
- Enable Tauri signing keys in release-app.yml for auto-updater
- Update branding to 'Computer-Aided Design for HYdraulics'
- Expand CHANGELOG with complete backend feature documentation
- Improve mobile navbar with top sheet design
- Add Vercel configuration and ignore files

--- a/apps/desktop/src/i18n/locales/en.json
+++ b/apps/desktop/src/i18n/locales/en.json
@@ -443,7 +443,7 @@
     "viewChangelog": "View Changelog"
   },
   "about": {
-    "description": "Computational Analysis and Design for Hydraulics",
+    "description": "Computer-Aided Design for HYdraulics (CADHY)",
     "modified": "MODIFIED",
     "buildInfo": "Build Information",
     "version": "Version",
