feat(web): add changelog page with timeline layout
- New /changelog page with Cursor-style timeline
- Cards in landing section now link to specific versions
- Footer changelog link now points to /changelog
- i18n translations for all new strings
- Timeline shows date sidebar, version header, parsed markdown
- Colored section headers (Fixed, Added, Changed)
- Scroll to specific version via hash (#v0.1.1)

--- a/apps/web/src/lib/i18n/en.json
+++ b/apps/web/src/lib/i18n/en.json
@@ -80,7 +80,15 @@
     "title": "What's New",
     "description": "Latest updates and improvements to CADHY.",
     "viewReleaseNotes": "View release notes",
-    "allReleases": "All releases"
+    "allReleases": "All releases",
+    "pageTitle": "Changelog",
+    "pageDescription": "All updates, improvements, and fixes for CADHY.",
+    "backToHome": "Back to home",
+    "viewOnGithub": "View on GitHub",
+    "unableToLoad": "Unable to load releases.",
+    "noReleases": "No releases available.",
+    "footerNote": "This is just the beginning.",
+    "checkRoadmap": "Check the roadmap"
   },
   "faq": {
     "badge": "FAQ",
