feat(desktop): improve update UI with badge and better changelog display
- UpdateBadge: shows notification after update installed or dismissed
- UpdateDialog: cleans GitHub URLs from changelog, adds link to full release
- StatusBar: shows update badge when update pending/installed
- use-updater: persists update state to localStorage for badge display
- i18n: added translations for update badge states

--- a/apps/desktop/src/i18n/locales/en.json
+++ b/apps/desktop/src/i18n/locales/en.json
@@ -780,5 +780,12 @@
     "next": "Next",
     "skip": "Skip",
     "getStarted": "Get Started"
+  },
+  "update": {
+    "badgePending": "Update",
+    "badgeInstalled": "What's new",
+    "tooltipPending": "Update available - Click to view changelog",
+    "tooltipInstalled": "App updated successfully - See what's new",
+    "clickToViewChangelog": "Click to view full changelog on GitHub"
   }
 }
