--- a/apps/desktop/src/i18n/locales/es.json
+++ b/apps/desktop/src/i18n/locales/es.json
@@ -774,5 +774,12 @@
       "openProject": "Abrir Proyecto",
       "newProject": "Nuevo Proyecto"
     }
+  },
+  "update": {
+    "badgePending": "Actualizar",
+    "badgeInstalled": "Novedades",
+    "tooltipPending": "Actualización disponible - Clic para ver cambios",
+    "tooltipInstalled": "App actualizada exitosamente - Ver novedades",
+    "clickToViewChangelog": "Clic para ver el changelog completo en GitHub"
   }
 }
