fix(desktop): multiple UI fixes and camera animation feature
Bug Fixes:
- Fix ParamInput crash with undefined values in ChuteCreator, TransitionCreator, CreatePanel
- Fix HelpDialog hardcoded version - now uses dynamic version from Tauri
- Fix GitHub URL typo in UpdateBadge and UpdateDialog (crhristian -> crhistian)
- Fix auto-updater running in development mode - now skips update checks
- Fix HDR environment loading error - changed preset to 'apartment'
- Fix Light Background toggle not working - now updates Three.js scene.background
- Fix ProjectsView scroll - add overflow-hidden and min-h-0 for proper ScrollArea
- Fix titlebar logo position on macOS fullscreen - logo moves to left when traffic lights hidden
- Remove unused hardcoded version from i18n files

Features:
- Add camera animation panel with keyframe-based animations
- Add camera views popover for quick camera position switching
- Add useIsFullscreen hook for detecting fullscreen state
- Add build-time variables in vite.config.ts for version info

Improvements:
- CreatePanel: only Hydraulics section open by default
- Refactor tauri-service to use backend's get_extended_system_info
- Add camera-slice to modeller store for animation state management

--- a/apps/desktop/src/i18n/locales/en.json
+++ b/apps/desktop/src/i18n/locales/en.json
@@ -1,7 +1,6 @@
 {
   "app": {
-    "name": "CADHY",
-    "version": "v0.1.0"
+    "name": "CADHY"
   },
   "common": {
     "save": "Save",
@@ -19,7 +18,42 @@
     "success": "Success",
     "confirm": "Confirm",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "rename": "Rename",
+    "apply": "Apply"
+  },
+  "camera": {
+    "savedViews": "Saved Views",
+    "enterViewName": "Enter view name...",
+    "saveCurrentView": "Save Current View",
+    "noSavedViews": "No saved views yet",
+    "enterName": "Please enter a view name",
+    "viewSaved": "View saved",
+    "viewLoaded": "Loaded view",
+    "viewDeleted": "View deleted",
+    "viewRenamed": "View renamed"
+  },
+  "animation": {
+    "title": "Camera Animations",
+    "createNew": "Create New Animation",
+    "animationName": "Animation name...",
+    "selectAnimation": "Select Animation",
+    "selectOne": "Select an animation...",
+    "playback": "Playback",
+    "timeline": "Timeline",
+    "keyframes": "keyframes",
+    "keyframesList": "Keyframes",
+    "addKeyframe": "Add Keyframe at Current Time",
+    "duration": "Duration",
+    "easing": "Easing",
+    "noAnimations": "No animations yet. Create one to get started.",
+    "enterName": "Please enter an animation name",
+    "created": "Animation created",
+    "deleted": "Animation deleted",
+    "keyframeAdded": "Keyframe added",
+    "keyframeDeleted": "Keyframe deleted",
+    "showPanel": "Show Animation Panel",
+    "hidePanel": "Hide Animation Panel"
   },
   "sidebar": {
     "home": "Home",
