chore: sync with remote and preserve local changes
- Synchronized with origin/main (commit 19aaa56)
- Added missing sonner dependency
- Resolved merge conflicts (HotkeySettings, SimpleSelectionBox)
- Preserved all local modifications to components and stores
- Updated UI components and factory implementations
- Fixed redundant role attribute in pagination component

--- a/apps/desktop/src/i18n/locales/en.json
+++ b/apps/desktop/src/i18n/locales/en.json
@@ -173,6 +173,7 @@
     "objects": "Objects",
     "connections": "Connections",
     "cursorPosition": "Cursor position / Selected object coordinates",
+    "selectionCenter": "Selection Center (Bounding Box)",
     "switchUnits": "Click to switch to {{units}} units",
     "metric": "Metric",
     "imperial": "Imperial",
