--- a/apps/desktop/src/i18n/locales/es.json
+++ b/apps/desktop/src/i18n/locales/es.json
@@ -171,6 +171,7 @@
     "objects": "Objetos",
     "connections": "Conexiones",
     "cursorPosition": "Posición del cursor / Coordenadas del objeto seleccionado",
+    "selectionCenter": "Centro de Selección (Bounding Box)",
     "switchUnits": "Clic para cambiar a unidades {{units}}",
     "metric": "Métricas",
     "imperial": "Imperiales",
